@@ -3,6 +3,8 @@ xxxx/xx/xx
 
 * Bug Fixes and Enhancements *
 
+ - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
+          affecting topology population functions (Sandro Santilli)
  - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
  - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
  - #5679, Remove spurious COMMIT statements from sfcgal script
